# Flood-Management-App

Arduino/FloodMonitoring/: FloodMonitoring.ino
Django/FloodMonitoring/: .env.sample  main.py  pyproject.toml  render.yaml  test_data_api.py
Django/FloodMonitoring/api/: models.py  urls.py  utils.py  views.py
Django/FloodMonitoring/api/supabase/: utils.py
Django/FloodMonitoring/api/util/: data_collector.py  mock_listener.py  mock_sensor.py
Django/FloodMonitoring/api/util/helpers/: blynk_listener.py  ingester.py  preprocessor.py  weather_fetcher.py
Django/FloodMonitoring/api/util/helpers/deprecated/: mqtt_listener.py
Django/FloodMonitoring/api/util/helpers/model_predictor/: model_loader.py  predictor.py  xgb_flood_model.pkl
Django/FloodMonitoring/fdw_backend/: asgi.py  settings.py  urls.py  wsgi.py
Django/FloodMonitoring/web/: urls.py  views.py
Django/FloodMonitoring/web/templates/web/: base.html  dashboard.html  login.html
Django/FloodMonitoring/web/templates/web/data_management/: emergency_crud.html  sensors_crud.html  thresholds_crud.html
Django/FloodMonitoring/web/templates/web/data_management/partials/: emergency_table_content.html  sensor_table_content.html  threshold_table_content.html
Flutter/floodmonitoring/: README.md  pubspec.yaml
Flutter/floodmonitoring/android/app/: build.gradle.kts
Flutter/floodmonitoring/lib/: main.dart
Flutter/floodmonitoring/linux/: CMakeLists.txt
Flutter/floodmonitoring/test/: widget_test.dart
Flutter/floodmonitoring/web/: index.html  manifest.json
Flutter/floodmonitoring/windows/: CMakeLists.txt
(+41 files in other folders)
