[project]
name = "fdw-backend-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.13",
    "django-cors-headers>=4.9.0",
    "django-redis>=6.0.0",
    "djangorestframework>=3.17.1",
    "dotenv>=0.9.9",
    "gunicorn>=25.3.0",
    "paho-mqtt>=2.1.0",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "supabase>=2.28.3",
    "xgboost>=3.2.0",
]
